@@ -1144,7 +1144,7 @@ SEXP attribute_hidden R_subset3_dflt(SEXP x, SEXP input, SEXP call)
 	if (havematch == 1) { /* unique partial match */
 	    if(R_warn_partial_match_dollar) {
 		const char *st = "";
-		SEXP target = TAG(y);
+		SEXP target = TAG(xmatch);
 		switch (TYPEOF(target)) {
 		case SYMSXP:
 		    st = CHAR(PRINTNAME(target));
